// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ShowBandlistModal when "REVIEW LAST ROUND" button is clicked 1`] = `
<div>
  <Connect(Header)
    buttonPressed={false}
  />
  <div>
    <div
      className="home-container"
    >
      <ForwardRef(MotionComponent)
        animate="show"
        className="logo-square"
        initial={
          Object {
            "opacity": 0,
          }
        }
        transition={
          Object {
            "duration": 2,
          }
        }
        variants={
          Object {
            "hide": Object {
              "opacity": 0,
            },
            "show": Object {
              "opacity": 1,
            },
          }
        }
      >
        <SvgLogoSquare />
      </ForwardRef(MotionComponent)>
      <div
        className="new-game-button"
        onClick={[Function]}
        title="Start new game"
      >
        <ForwardRef(MotionComponent)
          animate="notPressed"
          className="play-button"
          initial={
            Object {
              "rotate": -360,
              "scale": 0,
            }
          }
          onClick={[Function]}
          transition={
            Object {
              "duration": 1.2,
              "times": Array [
                0,
                0.4,
                1,
              ],
            }
          }
          variants={
            Object {
              "notPressed": Object {
                "opacity": 1,
                "rotate": 720,
                "scale": 1,
              },
              "pressed": Object {
                "opacity": Array [
                  null,
                  1,
                  0,
                ],
                "rotate": Array [
                  null,
                  780,
                  0,
                ],
                "scale": Array [
                  null,
                  1.1,
                  0,
                ],
              },
            }
          }
        >
          <SvgPlayIcon />
        </ForwardRef(MotionComponent)>
      </div>
      <div
        className="footer"
      >
        <button
          className="show-modal-button"
          onClick={[Function]}
        >
          REVIEW LAST ROUND
        </button>
      </div>
    </div>
  </div>
  <ShowBandlistModal
    bands={
      Array [
        Object {
          "name": "one",
          "url": "www.1img.com",
        },
        Object {
          "name": "two",
          "url": "www.2img.com",
        },
        Object {
          "name": "three",
          "url": "www.3img.com",
        },
      ]
    }
    closeModal={[Function]}
    lastRound={true}
    showModal={true}
  />
</div>
`;

exports[`should render with <Play /> when inGame is true 1`] = `
<div>
  <Connect(Header)
    buttonPressed={false}
  />
  <div />
  <Connect(Play)
    releaseButton={[Function]}
  />
  <ShowBandlistModal
    closeModal={[Function]}
    lastRound={true}
    showModal={false}
  />
</div>
`;

exports[`should render with PLAY <button> and Review... <button> when inGame is false and bands.length > 0 1`] = `
<div>
  <Connect(Header)
    buttonPressed={false}
  />
  <div>
    <div
      className="home-container"
    >
      <ForwardRef(MotionComponent)
        animate="show"
        className="logo-square"
        initial={
          Object {
            "opacity": 0,
          }
        }
        transition={
          Object {
            "duration": 2,
          }
        }
        variants={
          Object {
            "hide": Object {
              "opacity": 0,
            },
            "show": Object {
              "opacity": 1,
            },
          }
        }
      >
        <SvgLogoSquare />
      </ForwardRef(MotionComponent)>
      <div
        className="new-game-button"
        onClick={[Function]}
        title="Start new game"
      >
        <ForwardRef(MotionComponent)
          animate="notPressed"
          className="play-button"
          initial={
            Object {
              "rotate": -360,
              "scale": 0,
            }
          }
          onClick={[Function]}
          transition={
            Object {
              "duration": 1.2,
              "times": Array [
                0,
                0.4,
                1,
              ],
            }
          }
          variants={
            Object {
              "notPressed": Object {
                "opacity": 1,
                "rotate": 720,
                "scale": 1,
              },
              "pressed": Object {
                "opacity": Array [
                  null,
                  1,
                  0,
                ],
                "rotate": Array [
                  null,
                  780,
                  0,
                ],
                "scale": Array [
                  null,
                  1.1,
                  0,
                ],
              },
            }
          }
        >
          <SvgPlayIcon />
        </ForwardRef(MotionComponent)>
      </div>
      <div
        className="footer"
      >
        <button
          className="show-modal-button"
          onClick={[Function]}
        >
          REVIEW LAST ROUND
        </button>
      </div>
    </div>
  </div>
  <ShowBandlistModal
    bands={
      Array [
        Object {
          "name": "one",
          "url": "www.1img.com",
        },
        Object {
          "name": "two",
          "url": "www.2img.com",
        },
        Object {
          "name": "three",
          "url": "www.3img.com",
        },
      ]
    }
    closeModal={[Function]}
    lastRound={true}
    showModal={false}
  />
</div>
`;

exports[`should render with PLAY <button> when inGame is false 1`] = `
<div>
  <Connect(Header)
    buttonPressed={false}
  />
  <div>
    <div
      className="home-container"
    >
      <ForwardRef(MotionComponent)
        animate="show"
        className="logo-square"
        initial={
          Object {
            "opacity": 0,
          }
        }
        transition={
          Object {
            "duration": 2,
          }
        }
        variants={
          Object {
            "hide": Object {
              "opacity": 0,
            },
            "show": Object {
              "opacity": 1,
            },
          }
        }
      >
        <SvgLogoSquare />
      </ForwardRef(MotionComponent)>
      <div
        className="new-game-button"
        onClick={[Function]}
        title="Start new game"
      >
        <ForwardRef(MotionComponent)
          animate="notPressed"
          className="play-button"
          initial={
            Object {
              "rotate": -360,
              "scale": 0,
            }
          }
          onClick={[Function]}
          transition={
            Object {
              "duration": 1.2,
              "times": Array [
                0,
                0.4,
                1,
              ],
            }
          }
          variants={
            Object {
              "notPressed": Object {
                "opacity": 1,
                "rotate": 720,
                "scale": 1,
              },
              "pressed": Object {
                "opacity": Array [
                  null,
                  1,
                  0,
                ],
                "rotate": Array [
                  null,
                  780,
                  0,
                ],
                "scale": Array [
                  null,
                  1.1,
                  0,
                ],
              },
            }
          }
        >
          <SvgPlayIcon />
        </ForwardRef(MotionComponent)>
      </div>
      <div
        className="footer"
      >
        <button
          className="show-modal-button-invisible"
        >
          NOT SHOWING
        </button>
      </div>
    </div>
  </div>
  <ShowBandlistModal
    bands={Array []}
    closeModal={[Function]}
    lastRound={true}
    showModal={false}
  />
</div>
`;
